--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,6 +7,7 @@ brew "git"
 brew "git-extras"
 brew "git-flow"
 brew "git-stree"
+brew "nano"
 brew "node", args: ["without-npm"]
 brew "otto"
 brew "packer"
