Add nmap and git-subrepo to Brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,8 +7,10 @@ brew "git"
 brew "git-extras"
 brew "git-flow"
 brew "git-stree"
+brew "git-subrepo"
 brew "nano"
 brew "node", args: ["without-npm"]
+brew "nmap"
 brew "otto"
 brew "packer"
 brew "php56"
