--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,6 +5,7 @@ brew "docker"
 brew "docker-compose"
 brew "docker-machine"
 brew "docker-machine-driver-xhyve"
+brew "ffmpeg"
 brew "git"
 brew "git-extras"
 brew "git-flow"
