Add fswatch and rsync

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/dupes"
 brew "dnsmasq"
 brew "composer"
 brew "ffmpeg"
+brew "fswatch"
 brew "git"
 brew "git-extras"
 brew "git-flow"
@@ -17,6 +18,7 @@ brew "packer"
 brew "php70"
 brew "phploc"
 brew "python"
+brew "rsync"
 brew "stow"
 brew "symfony-installer"
 brew "unison"
