Install ruby-build and rbenv.

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -24,7 +24,9 @@ brew "packer"
 brew "php70"
 brew "phploc"
 brew "python"
+brew "rbenv"
 brew "rsync"
+brew "ruby-build"
 brew "stow"
 brew "symfony-installer"
 brew "unison"
