--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,26 +1,26 @@
 tap "homebrew/dupes"
+tap "homebrew/versions"
+tap "homebrew/homebrew-php"
 tap "codekitchen/dinghy"
 
+brew "ansible"
+brew "composer"
 brew "dinghy"
 brew "docker"
 brew "docker-compose"
 brew "docker-machine"
+brew "docker-machine-driver-xhyve"
 brew "ffmpeg"
 brew "git"
-brew "git-extras"
-brew "git-flow"
 brew "imagemagick"
 brew "nano"
-brew "nmap"
-brew "nvm"
-brew "otto"
+brew "php71"
 brew "python"
-brew "rbenv"
 brew "rsync"
-brew "ruby-build"
 brew "stow"
 brew "watch"
 brew "wget"
+brew "xz"
 brew "zsh"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
