--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -12,6 +12,7 @@ brew "docker-machine"
 brew "docker-machine-driver-xhyve"
 brew "ffmpeg"
 brew "git"
+brew "git-flow"
 brew "imagemagick"
 brew "nano"
 brew "php71"
