Add new packages to the Brewfile.

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -15,8 +15,11 @@ brew "git"
 brew "git-flow"
 brew "imagemagick"
 brew "nano"
+brew "nmap"
 brew "php70"
+brew "php70-xdebug"
 brew "php71"
+brew "php-cs-fixer"
 brew "python"
 brew "rsync"
 brew "stow"
