Update brew packages.

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,24 +3,18 @@ tap "homebrew/versions"
 tap "homebrew/homebrew-php"
 tap "codekitchen/dinghy"
 
-brew "ansible"
-brew "composer"
 brew "dinghy"
 brew "docker"
 brew "docker-compose"
 brew "docker-machine"
-brew "docker-machine-driver-xhyve"
 brew "ffmpeg"
 brew "git"
+brew "git-extras"
 brew "git-flow"
 brew "imagemagick"
 brew "nano"
 brew "nmap"
 brew "node"
-brew "php71"
-brew "php71-mcrypt"
-brew "php71-xdebug"
-brew "php-cs-fixer"
 brew "python"
 brew "rsync"
 brew "s3cmd"
