--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -17,7 +17,7 @@ brew "git-flow"
 brew "imagemagick"
 brew "nano"
 brew "nmap"
-brew "node"
+brew "nvm"
 brew "parallel"
 brew "python"
 brew "rsync"
