Keep the proxy enabled for now.

--- a/dinghy/.dinghy/preferences.yml
+++ b/dinghy/.dinghy/preferences.yml
@@ -1,6 +1,6 @@
 ---
 :preferences:
-  :proxy_disabled: true
+  :proxy_disabled: false
   :fsevents_disabled: false
   :create:
     provider: virtualbox
