--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "antigen/antigen"]
 	path = antigen/antigen
-	url = git@github.com:zsh-users/antigen.git
+	url = https://github.com/zsh-users/antigen.git
 [submodule "nano/.nano"]
 	path = nano/.nano
-	url = git@github.com:scopatz/nanorc.git
+	url = https://github.com/scopatz/nanorc.git
