Add fancy new programming font.

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,6 +1,7 @@
 tap "homebrew/dupes"
 tap "homebrew/versions"
 tap "homebrew/homebrew-php"
+tap "caskroom/fonts"
 tap "codekitchen/dinghy"
 
 cask "java" unless system "/usr/libexec/java_home --failfast"
@@ -11,6 +12,7 @@ brew "docker"
 brew "docker-compose"
 brew "docker-machine"
 brew "ffmpeg"
+cask "font-fira-code"
 brew "git"
 brew "git-extras"
 brew "git-flow"
