--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -35,7 +35,7 @@
 	autocorrect = 1
 
 [core]
-	excludesfile = ~/.gitignore
+	excludesfile = /Users/mathewdavies/.gitignore
 
 [advice]
 	statusHints = false
