--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,9 +17,10 @@
 	cleanup = "!git branch --merged | grep  -v '\\*\\|master\\|develop\\|stage' | xargs -n 1 git branch -d"
 
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
 	required = true
+	process = git-lfs filter-process
 
 [color]
 	ui = true
