More Brew packages, httpie, nethogs, gitlab-runner and iftop.

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -12,7 +12,11 @@ cask "font-fira-code"
 brew "git"
 brew "git-extras"
 brew "git-flow"
+brew "gitlab-runner"
+brew "httpie"
+brew "iftop"
 brew "imagemagick"
+brew "nethogs"
 brew "nano"
 brew "nmap"
 brew "nvm"
