--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,31 +1,16 @@
-tap "homebrew/dupes"
-tap "homebrew/versions"
-tap "homebrew/homebrew-php"
-tap "caskroom/fonts"
-
-cask "java" unless system "/usr/libexec/java_home --failfast"
+tap "homebrew/cask-fonts"
 
 brew "autojump"
-brew "bfg"
-brew "ffmpeg"
+brew "composer"
 cask "font-fira-code"
 brew "git"
-brew "git-extras"
-brew "git-flow"
-brew "gitlab-runner"
-brew "httpie"
 brew "iftop"
-brew "imagemagick"
-brew "nethogs"
 brew "nano"
 brew "nmap"
 brew "nvm"
+brew "php@7.1"
 brew "python"
-brew "robo"
 brew "rsync"
-brew "s3cmd"
-brew "speedtest-cli"
-brew "stow"
 brew "watch"
 brew "wget"
 brew "xz"
